# async-openai

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  openapi.documented.yml  openapi.yaml
async-openai/: Cargo.toml  MIDDLEWARE.md  README.md  middleware.md
async-openai-macros/: Cargo.toml  README.md
async-openai-macros/src/: lib.rs
async-openai/src/: admin.rs  admin_api_keys.rs  assistant_files.rs  assistants.rs  async_convert.rs  audio.rs  audit_logs.rs  batches.rs  beta.rs  certificates.rs  chat.rs  chat_with_trait.rs  chatkit.rs  client.rs  completion.rs  config.rs  container_files.rs  containers.rs  conversation_items.rs  conversations.rs  download.rs  edit.rs  embedding.rs  error.rs  eval_run_output_items.rs  eval_runs.rs  evals.rs  executor.rs  file.rs  fine_tune.rs  fine_tuning.rs  group_roles.rs  groups.rs  http_client.rs  http_executor.rs  image.rs  impls.rs  invites.rs  lib.rs  message_files.rs  (+35 more)
async-openai/src/admin/: admin_.rs  admin_api_keys.rs  certificates.rs  group_users.rs  groups.rs  invites.rs  mod.rs  project_api_keys.rs  project_certificates.rs  project_groups.rs  project_roles.rs  project_service_accounts.rs  project_user_roles.rs  projects.rs  users.rs
async-openai/src/assistants/: assistants_.rs  messages.rs  mod.rs  runs.rs  steps.rs  threads.rs
async-openai/src/audio/: audio_.rs  mod.rs  speech.rs  transcriptions.rs  translations.rs  voice_consents.rs  voices.rs
async-openai/src/containers/: container_files.rs  containers_.rs  mod.rs
async-openai/src/evals/: eval_run_output_items.rs  eval_runs.rs  evals.rs  mod.rs
async-openai/src/middleware/: mod.rs
async-openai/src/responses/: conversation_items.rs  conversations.rs  mod.rs  responses_.rs
async-openai/src/retry/: mod.rs  openai.rs
async-openai/src/skills/: mod.rs  skill_versions.rs  skills_.rs
async-openai/src/types/: admin_api_key.rs  assistant.rs  assistant_file.rs  assistant_impls.rs  assistant_stream.rs  audio.rs  batch.rs  chat.rs  (+35 more)
async-openai/tests/: boxed_future.rs  bring-your-own-type.rs  bring_your_own_type.rs  chat_completion.rs  completion.rs  embeddings.rs  extensible.rs  responses.rs  responses_input_item_serde.rs  responses_output_to_input.rs  responses_tool_search_serde.rs  ser_de.rs  string-errors.rs  whisper.rs
examples/: Cargo.toml  Makefile.toml
examples/assistants/: Cargo.toml  README.md
examples/assistants-code-interpreter/: Cargo.toml  README.md
examples/assistants-file-search/: Cargo.toml  README.md
examples/assistants-func-call-stream/: Cargo.toml  README.md
examples/audio-speech/: Cargo.toml  README.md
examples/audio-speech-stream/: Cargo.toml  README.md
examples/audio-transcribe/: Cargo.toml
examples/audio-translate/: Cargo.toml  README.md
examples/azure-openai-service/: Cargo.toml  README.md
examples/azure-openai-web-app/: Cargo.toml  README.md
examples/borrow-instead-of-move/: Cargo.toml
examples/bring-your-own-type/: Cargo.toml  README.md
examples/chat/: Cargo.toml  README.md
examples/chat-audio/: Cargo.toml
examples/chat-store/: Cargo.toml  README.md
examples/chat-stream/: Cargo.toml  README.md
examples/chatkit/: Cargo.toml
examples/cloudflare-wasm-worker/: .gitignore  Cargo.toml  README.md  package-lock.json  wrangler.toml
examples/codex/: Cargo.toml  README.md
examples/completions/: Cargo.toml
examples/completions-proxy/: Cargo.toml
examples/completions-stream/: Cargo.toml  README.md
examples/completions-web-search/: Cargo.toml
examples/containers/: Cargo.toml
examples/conversations/: Cargo.toml
examples/create-edit/: Cargo.toml  README.md
examples/create-image/: Cargo.toml  README.md
examples/create-image-b64-json/: Cargo.toml  README.md
examples/create-image-edit/: Cargo.toml  README.md
examples/create-image-variation/: Cargo.toml  README.md
examples/dotenv-client/: .env  Cargo.toml
examples/embeddings/: Cargo.toml
examples/fine-tune/: Cargo.toml
examples/fine-tune-cli/: Cargo.toml
examples/function-call/: Cargo.toml  README.md
examples/function-call-stream/: Cargo.toml
examples/gemini-openai-compatibility/: Cargo.toml  README.md
examples/image/: Cargo.toml
examples/image-edit/: Cargo.toml  README.md
examples/image-edit-stream/: Cargo.toml
examples/image-gen-stream/: Cargo.toml
examples/image-generate/: Cargo.toml
examples/image-generate-b64-json/: Cargo.toml  README.md
examples/in-memory-file/: Cargo.toml  README.md
examples/middleware/: Cargo.toml
examples/models/: Cargo.toml
examples/moderations/: Cargo.toml
examples/ollama-chat/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ollama_entrypoint.sh
examples/openai-web-app/: Cargo.toml  README.md
examples/rate-limit-completions/: Cargo.toml  README.md
examples/rate-limit-edit/: Cargo.toml  README.md
examples/realtime/: Cargo.toml  README.md
examples/responses/: Cargo.toml
examples/responses-function-call/: Cargo.toml
examples/responses-images-and-vision/: Cargo.toml  README.md
examples/responses-multi-turn-reasoning/: Cargo.toml
examples/responses-retrieve-stream/: Cargo.toml
examples/responses-stream/: Cargo.toml
examples/responses-structured-outputs/: Cargo.toml
examples/responses-tool-search/: Cargo.toml
examples/responses-tool-search-client/: Cargo.toml
examples/responses-web-search/: Cargo.toml
examples/string-errors/: Cargo.toml  README.md
examples/structured-outputs/: Cargo.toml
examples/structured-outputs-schemars/: Cargo.toml  README.md
examples/tool-call/: Cargo.toml
examples/tool-call-stream/: Cargo.toml
examples/tower/: Cargo.toml
examples/tower-wasm/: Cargo.toml  Dioxus.toml  README.md
examples/usage/: Cargo.toml
examples/vector-store-retrieval/: Cargo.toml  README.md
examples/video/: Cargo.toml  README.md
examples/vision-chat/: Cargo.toml  README.md
examples/wasm-responses/: Cargo.toml  Dioxus.toml  README.md
examples/wasm-responses-stream/: Cargo.toml  Dioxus.toml  README.md
examples/web-search/: Cargo.toml
examples/webhooks/: Cargo.toml  README.md
(+281 files in other folders)
