[workspace]
members = [ "async-openai", "async-openai-*", "examples/*" ]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["async-openai", "async-openai-*"]
resolver = "2"

[workspace.package]
rust-version = "1.75"

[patch.crates-io]
reqwest-eventsource = { git = "https://github.com/ttys3/reqwest-eventsource.git" }
