[package]
name = "async-openai"
version = "0.27.2"
authors = ["Himanshu Neema"]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["openai", "async", "openapi", "ai"]
description = "Rust library for OpenAI"
edition = "2021"
rust-version = "1.75"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/async-openai"
repository = "https://github.com/64bit/async-openai"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]
realtime = ["dep:tokio-tungstenite"]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "multipart",
], default-features = false }
reqwest-eventsource = "0.6.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2.0.11"
tokio = { version = "1", features = ["fs", "macros"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io-util"] }
tracing = "0.1"
derive_builder = "0.20"
secrecy = { version = "0.10", features = ["serde"] }
bytes = "1"
eventsource-stream = "0.2"
tokio-tungstenite = { version = "0.26", optional = true, default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
