[package]
name = "async-openai"
version = "0.31.0-beta.1"
authors = ["Himanshu Neema"]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["openai", "async", "openapi", "ai"]
description = "Rust library for OpenAI"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/async-openai"
repository = "https://github.com/64bit/async-openai"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["dep:reqwest", "reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["dep:reqwest", "reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["dep:reqwest", "reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["dep:reqwest", "reqwest/native-tls-vendored"]
# Bring your own types
byot = ["dep:async-openai-macros"]

# API feature flags - these enable both the API wrapper and types
responses = ["response-types", "_api"]
webhook = ["webhook-types", "dep:base64", "dep:thiserror", "dep:hmac", "dep:sha2", "dep:hex"]
# start - Platform APIs
audio = ["audio-types", "_api"]
video = ["video-types", "_api"]
image = ["image-types", "_api"]
embedding = ["embedding-types", "_api"]
evals = ["eval-types", "_api"]
finetuning = ["finetuning-types", "_api"]
grader = ["grader-types"]
batch = ["batch-types", "_api"]
file = ["file-types", "_api"]
upload = ["upload-types", "_api"]
model = ["model-types", "_api"]
moderation = ["moderation-types", "_api"]
# end - Platform APIs
vectorstore = ["vectorstore-types", "_api"]
chatkit = ["chatkit-types", "_api"]
container = ["container-types", "_api"]
realtime = ["realtime-types", "_api", "dep:tokio-tungstenite"]
chat-completion = ["chat-completion-types", "_api"]
assistant = ["assistant-types", "_api", ]
administration = ["administration-types", "_api"]
completions = ["completion-types", "_api"]

# Type feature flags - these enable only the types
response-types = ["dep:derive_builder"]
webhook-types = ["dep:derive_builder"]
audio-types = ["dep:derive_builder", "dep:bytes"]
video-types = ["dep:derive_builder", "dep:bytes"]
image-types = ["dep:derive_builder", "dep:bytes"]
embedding-types = ["dep:derive_builder"]
eval-types = ["dep:derive_builder", "chat-completion-types", "response-types", "grader-types"]
finetuning-types = ["dep:derive_builder", "grader-types"]
grader-types = ["dep:derive_builder", "eval-types"]
batch-types = ["dep:derive_builder"]
file-types = ["dep:derive_builder", "dep:bytes"]
upload-types = ["dep:derive_builder", "dep:bytes", "file-types"]
model-types = ["dep:derive_builder"]
moderation-types = ["dep:derive_builder"]
vectorstore-types = ["dep:derive_builder"]
chatkit-types = ["dep:derive_builder"]
container-types = ["dep:derive_builder", "dep:bytes"]
realtime-types = ["dep:derive_builder", "dep:bytes", "response-types"]
chat-completion-types = ["dep:derive_builder", "dep:bytes"]
assistant-types = ["dep:derive_builder"]
administration-types = ["dep:derive_builder"]
completion-types = ["dep:derive_builder", "chat-completion-types" ]

# Enable all types
types = [
    "response-types",
    "webhook-types",
    "audio-types",
    "video-types",
    "image-types",
    "embedding-types",
    "eval-types",
    "finetuning-types",
    "grader-types",
    "batch-types",
    "file-types",
    "upload-types",
    "model-types",
    "moderation-types",
    "vectorstore-types",
    "chatkit-types",
    "container-types",
    "realtime-types",
    "chat-completion-types",
    "assistant-types",
    "administration-types",
    "completion-types",
]

# Enable all features
full = [
    "responses",
    "webhook",
    "audio",
    "video",
    "image",
    "embedding",
    "evals",
    "finetuning",
    "batch",
    "file",
    "upload",
    "model",
    "moderation",
    "vectorstore",
    "chatkit",
    "container",
    "realtime",
    "chat-completion",
    "assistant",
    "administration",
    "completions",
    "types",
    "byot",
]

# Internal feature to enable API dependencies
_api = [
    "dep:async-openai-macros",
    "dep:backoff",
    "dep:base64",
    "dep:bytes",
    "dep:futures",
    "dep:rand",
    "dep:reqwest",
    "dep:reqwest-eventsource",
    "dep:thiserror",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:tracing",
    "dep:secrecy",
    "dep:eventsource-stream",
    "dep:serde_urlencoded",
    "dep:url",
]


[dependencies]
# Core dependencies - always needed for types
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
derive_builder = { version = "0.20", optional = true }
bytes = { version = "1.11", optional = true }

# API dependencies - only needed when API features are enabled
# We use a feature gate to enable these when any API feature is enabled
async-openai-macros = { path = "../async-openai-macros", version = "0.1.0", optional = true }
backoff = { version = "0.4.0", features = ["tokio"], optional = true }
base64 = { version = "0.22", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.9", optional = true }
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "multipart",
], default-features = false, optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }
thiserror = { version = "2", optional = true }
tokio = { version = "1", features = ["fs", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["codec", "io-util"], optional = true }
tracing = { version = "0.1", optional = true }
secrecy = { version = "0.10", features = ["serde"], optional = true }
eventsource-stream = { version = "0.2", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
url = { version = "2.5", optional = true }
# For Realtime websocket
tokio-tungstenite = { version = "0.28", optional = true, default-features = false }
# For Webhook signature verification
hmac = { version = "0.12", optional = true, default-features = false}
sha2 = { version = "0.10", optional = true, default-features = false }
hex = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1"

[[test]]
name = "bring_your_own_type"
required-features = ["full"]

[[test]]
name = "boxed_future"
required-features = ["completions", "chat-completion-types"]

[[test]]
name = "chat_completion"
required-features = ["chat-completion-types"]

[[test]]
name = "embeddings"
required-features = ["embedding-types"]

[[test]]
name = "ser_de"
required-features = ["chat-completion-types"]

[[test]]
name = "whisper"
required-features = ["audio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
