[workspace]
members = [
    "audio-transcribe",
    "audio-translate",
    "chat",
    "chat-stream",
    "create-edit",
    "completions",
    "completions-stream",
    "create-image",
    "create-image-b64-json",
    "create-image-edit",
    "create-image-variation",
    "embeddings",
    "models",
    "moderations",
    "rate-limit-completions",
]
resolver = "2"
