[package]
name = "assistants-code-interpreter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai", features = ["assistant", "file"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version =  "0.3",  features = ["env-filter"]}
