[package]
name = "assistants-func-call-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { path = "../../async-openai" }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
