[package]
name = "assistants-func-call-stream"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai" }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.135"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
