[package]
name = "assistants-func-call-stream"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai", features = ["assistant"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
