[package]
name = "bring-your-own-type"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
async-openai = {path = "../../async-openai", features = ["byot", "chat-completion"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures-core = "0.3"
futures = "0.3"
