[package]
name = "fine-tune-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = {path = "../../async-openai"}
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
