[package]
name = "fine-tune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = {path = "../../async-openai"}
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3.26"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
