[package]
name = "gemini-openai-compatibility"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = {path = "../../async-openai", features = ["byot", "chat-completion", "image", "embedding", "model"]}
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version =  "0.3",  features = ["env-filter"]}
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
