[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { path = "../../async-openai", features = ["realtime"] }
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.24.0", features = ["connect", "native-tls"] }
