[package]
name = "realtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai", features = ["realtime"] }
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.26.1", features = ["connect", "native-tls"] }
