[package]
name = "responses-function-call"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = {path = "../../async-openai"}
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.9.0"
rand = "0.9.1"