[package]
name = "responses-multi-turn-reasoning"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai", features = ["responses"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
