[package]
name = "tool-call-stream"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = {path = "../../async-openai"}
rand = "0.8.5"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
