[package]
name = "tool-call-stream"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = {path = "../../async-openai", features = ["chat-completion"]}
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
