[package]
name = "vision-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { path = "../../async-openai" }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
