[package]
name = "vision-chat"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { path = "../../async-openai", features = ["chat-completion"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
