[package]
name = "wasm-responses-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { path = "../../async-openai", features = ["responses"] }
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.5"
futures = "0.3"
tracing = "0.1"

[profile.release]
opt-level = "z"
lto = true
