[package]
name = "webhooks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = { path = "../../async-openai", features = ["webhook", "responses"] }
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.7.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

